[gd_scene load_steps=16 format=2]

[ext_resource path="res://Player/Assets/player.png" type="Texture" id=1]
[ext_resource path="res://Player/Scripts/Movement.gd" type="Script" id=2]
[ext_resource path="res://Player/Assets/player_shadow.png" type="Texture" id=3]
[ext_resource path="res://Player/Scripts/Player.gd" type="Script" id=4]
[ext_resource path="res://Player/Scripts/Habilities.gd" type="Script" id=5]
[ext_resource path="res://Player/Assets/Sound/bump1.wav" type="AudioStream" id=6]
[ext_resource path="res://Player/Scripts/Multiple_Sound_Player.gd" type="Script" id=7]
[ext_resource path="res://Player/Scripts/Chord.gd" type="Script" id=8]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ShadowSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ShadowSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "ShadowAnimation"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ShadowSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.4, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 1 ), Vector2( 0, 2 ), Vector2( 0, 1 ), Vector2( 1, -1 ), Vector2( 2, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ShadowSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1.3, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1 ), Vector2( 1.2, 1.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ShadowSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../CollisionShape:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../CollisionShape:shape:height")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../CollisionShape:shape:radius")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "boost_end"
length = 0.05
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.05 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.7, 0.3 ), Vector2( 0.5, 2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ShadowSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../CollisionShape:shape:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../CollisionShape:shape:radius")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "boost_init"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.2, 2 ), Vector2( 1.6, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ShadowSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 0.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../CollisionShape:shape:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 12.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../CollisionShape:shape:radius")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 3.0, 0.999978 ]
}

[sub_resource type="Animation" id=5]
resource_name = "squeeze"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.4, 1.7 ), Vector2( 1.5, 0.6 ), Vector2( 0.9, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 3.0
height = 2.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 4 )

[node name="Sprites" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="ShadowSprite" type="Sprite" parent="Sprites"]
position = Vector2( 2, 1 )
texture = ExtResource( 3 )

[node name="PlayerSprite" type="Sprite" parent="Sprites"]
texture = ExtResource( 1 )

[node name="ShadowAnimation" type="AnimationPlayer" parent="Sprites"]
autoplay = "ShadowAnimation"
anims/RESET = SubResource( 1 )
anims/ShadowAnimation = SubResource( 2 )

[node name="PlayerAnimation" type="AnimationPlayer" parent="Sprites"]
anims/RESET = SubResource( 4 )
anims/boost_end = SubResource( 7 )
anims/boost_init = SubResource( 6 )
anims/squeeze = SubResource( 5 )

[node name="Movement" type="Node2D" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}
SPEED = 80.0

[node name="CollisionShape" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Habilities" type="Node2D" parent="."]
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}
BOOST_LENGTH = 0.6
BOOST_SPEED = 100.0

[node name="BoostTimer" type="Timer" parent="Habilities"]

[node name="Bump_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
bus = "PlayerSoundEffects"
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Chord" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="SpawnPoint" type="Node2D" parent="Chord"]
position = Vector2( -8, 0 )

[connection signal="collision" from="Movement" to="." method="_on_Movement_collision"]
[connection signal="timeout" from="Habilities/BoostTimer" to="." method="_on_BoostTimer_timeout"]
[connection signal="timeout" from="Habilities/BoostTimer" to="Habilities" method="_on_BoostTimer_timeout"]
[connection signal="new_fence" from="Chord" to="." method="_on_Chord_new_fence"]
